--- a/scss/style.scss
+++ b/scss/style.scss
@@ -330,7 +330,7 @@
    }
 
    &__block {
-      padding: 0px 0px 266px 0px;
+      padding: 0px 0px 206px 0px;
    }
 
    &__column {
@@ -495,7 +495,7 @@
    &__text {
       font-weight: 400;
       font-size: 16px;
-      line-height: 159%px;
+      line-height: 159%;
       color: #5e5e5e;
       margin: 0px 0px 80px 0px;
       flex: 1 1 auto;
@@ -1181,6 +1181,7 @@
       flex-direction: column;
    }
    .design__sub-title {
+      width: 100%;
       flex: 0 1 auto;
       align-items: flex-start;
       padding: 0px 0px 20px 0px;
@@ -1233,6 +1234,10 @@
       right: 15px;
    }
 
+   .header {
+      background-color: #fff;
+   }
+
    .header__tel {
       padding: 0px 0px 0px 55px;
    }
@@ -1257,8 +1262,56 @@
       padding: 0;
    }
 
+   .cooperation__row {
+      display: flex;
+      padding: 0px;
+   }
+
+   .cooperation__button {
+      margin: 0px 0px 100px 0px;
+   }
+
+   .cooperation__title {
+      font-size: 18px;
+      font-weight: 700;
+      color: #181818;
+      padding: 49px 0px 34px 0px;
+      width: 789px;
+   }
+
+   .cooperation__button {
+      margin: 0px 0px 30px 0px;
+   }
+
+   .aboutcompany__block {
+      padding: 30px 40px 65px 0px;
+      margin: 0px 0px 0px 0px;
+      position: relative;
+      z-index: 3;
+   }
+
+   .working__block {
+      padding: 0px 0px 80px 0px;
+   }
+
+   .working__title {
+      padding: 100px 0px 82px 15px;
+   }
+
+   .benefits__title {
+      padding: 30px 0px 38px 0px;
+   }
+
+   .design__column:last-child {
+      padding: 0px 0px 120px 0px;
+   }
+
    .feedback__body {
       padding: 0;
+   }
+
+   .feedback__title {
+      padding: 130px 0px 29px 0px;
    }
 
    .benefits__body {
@@ -1286,6 +1339,10 @@
       flex: 1 1 auto;
    }
 
+   .contacts__design {
+      margin: 0px 0px 20px 0px;
+   }
+
    .info__contacts {
       flex: 1 1 auto;
       margin: 0px 0px 60px 0px;
@@ -1308,14 +1365,14 @@
    }
 
    .aboutcompany__block {
-      padding: 99px 0px 65px 0px;
+      padding: 30px 0px 10px 0px;
    }
 
    .block {
       &__aboutcompany {
          margin: 0 auto;
-         background-color: #f9f9f9;
-         box-shadow: inset 0px 6px 16px rgba(210, 210, 210, 0.96);
+         background-color: #fff;
+         box-shadow: none;
          border-radius: 5px;
          position: relative;
          z-index: 2;
@@ -1375,6 +1432,7 @@
 
    .footer__nav {
       flex-direction: column;
+      padding: 0;
    }
 
    .policy__link {
@@ -1390,22 +1448,12 @@
       margin: 23px 0px 50px 0px;
    }
 
-   .cooperation__button {
-      display: inline-block;
-      font-weight: 700;
-      font-size: 16px;
-      line-height: 59, 88%;
-      box-shadow: none;
-      border-radius: 5px;
-      padding: 20px 25px;
-      margin: 0px 0px 135px 0px;
-   }
-
    .feedback__btn {
       font-size: 16px;
       line-height: 167.02%;
+      padding: 0px 49px;
+      margin: 0px 0px 61px 0px;
    }
-
 }
 
 /*============MEDIA-MIN-320px--=================================================================*/
