--- a/scss/style.scss
+++ b/scss/style.scss
@@ -376,7 +376,6 @@
       height: 70px;
       border-radius: 50%;
       background-color: #522a77;
-      box-shadow: 4px 5px 15px rgba(155, 81, 224, 0.4);
       display: flex;
       justify-content: center;
       align-items: center;
@@ -591,9 +590,14 @@
       font-size: 18px;
       line-height: 123.6%;
       color: #181818;
+      transition: all 0.3s ease;
+   }
+
+   &__text:hover {
+      text-decoration-line: underline;
+      color: #4f2972;
    }
 }
-
 /*============BLOCK__7=================================================================*/
 
 .main {
@@ -1269,6 +1273,7 @@
 
    .cooperation__button {
       margin: 0px 0px 100px 0px;
+      padding: 20px 27px;
    }
 
    .cooperation__title {
@@ -1280,7 +1285,8 @@
    }
 
    .cooperation__button {
-      margin: 0px 0px 30px 0px;
+      margin: 0px 0px 60px 0px;
+      width: 100%;
    }
 
    .aboutcompany__block {
@@ -1295,7 +1301,7 @@
    }
 
    .working__title {
-      padding: 100px 0px 82px 15px;
+      padding: 100px 0px 50px 15px;
    }
 
    .benefits__title {
@@ -1352,6 +1358,14 @@
       flex: 1 1 auto;
       margin: 0px 0px 51px 0px;
    }
+
+   .info__text {
+      font-weight: 400;
+      font-size: 18px;
+      line-height: 123.6%;
+      text-decoration-line: underline;
+      color: #4F2972;
+   }
 }
 
 /*============MEDIA-MAX-560px--=================================================================*/
@@ -1365,7 +1379,7 @@
    }
 
    .aboutcompany__block {
-      padding: 30px 0px 10px 0px;
+      padding: 60px 0px 10px 0px;
    }
 
    .block {
