--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,7 @@ h6 {
   overflow: hidden;
   display: flex;
   flex-direction: column;
+  background-color: #f9f9f9;
 }
 
 .conteiner {
@@ -110,6 +111,9 @@ h6 {
 /*============HEAD=================================================================*/
 .header {
   background-color: #f9f9f9;
+  position: fixed;
+  width: 100%;
+  z-index: 40;
 }
 .header__body {
   height: 80px;
@@ -690,18 +694,26 @@ h6 {
   opacity: 0.7;
 }
 .author__link::before {
-  content: "";
+  content: "yasenko web";
+  text-transform: uppercase;
+  font-size: 8px;
+  line-height: 99.9%;
+  font-weight: 700;
+  color: #fafafa;
+  text-align: center;
+  display: flex;
+  align-items: center;
   position: absolute;
   right: 0;
   top: -60%;
-  background: url("../img/footer-ico/author.svg") center no-repeat;
+  background: url("../img/footer-ico/author.png") center/51px 51px no-repeat;
   width: 51px;
   height: 51px;
   transition: all 0.3s ease;
 }
 .author__link:hover::before {
   opacity: 1;
-  background: url("../img/footer-ico/author_hover.svg") center no-repeat;
+  background: url("../img/footer-ico/author_hover.svg") center/51px 51px no-repeat;
 }
 
 .footer__menu-list {
@@ -851,6 +863,7 @@ h6 {
   }
   .menu__nav-burger {
     display: block;
+    padding: 0px 0px 72px 0px;
   }
 
   .burger-nav {
@@ -875,7 +888,6 @@ h6 {
     font-size: 24px;
     line-height: 100.85%;
     font-weight: 600;
-    padding: 0px 0px 72px 0px;
   }
 
   .header__tel {
@@ -1062,7 +1074,7 @@ h6 {
   }
 
   .header {
-    background-color: #fff;
+    position: static;
   }
 
   .header__tel {
